--- a/MoneySplitter.Win10/Views/IncomingAndOutcomingView.xaml
+++ b/MoneySplitter.Win10/Views/IncomingAndOutcomingView.xaml
@@ -34,7 +34,7 @@
                     </Style>
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="models:CollabaratorModel">
+                    <DataTemplate x:DataType="models:CollaboratorModel">
                         <customControls:CollaboratorControl ViewModel="{x:Bind Mode=OneWay}"
                                                             OnRemindCollaboratorButtonClick="OnRemindCollaboratorButtonClick"
                                                             OnApproveCollaboratorButtonClick="OnApproveCollaboratorButtonClick"/>
@@ -66,7 +66,7 @@
                     </Style>
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="models:CollabaratorModel">
+                    <DataTemplate x:DataType="models:CollaboratorModel">
                         <customControls:CollaboratorControl ViewModel="{x:Bind Mode=OneWay}"
                                                             OnGiveCollaboratorButtonClick="OnGiveCollaboratorButtonClick"/>
                     </DataTemplate>
