--- a/MoneySplitter.Win10/Views/AddTransactionView.xaml
+++ b/MoneySplitter.Win10/Views/AddTransactionView.xaml
@@ -36,7 +36,8 @@
                 <DatePicker Header="Debt's diedline date"
                             Date="{x:Bind ViewModel.AddTransactionModel.DeadlineDate, Mode=TwoWay }"/>
                 <CheckBox Content="Are you callbarator?"
-                          IsChecked="{x:Bind ViewModel.IsSelfCollabarator, Mode=TwoWay}"/>
+                          IsChecked="{x:Bind ViewModel.IsSelfCollabarator, Mode=TwoWay}"
+                          />
                 <StackPanel Orientation="Horizontal"  Margin="0,8,0,0">
                     <TextBlock Text="{x:Bind  ViewModel.LabelForTransactionImage, Mode=OneWay}"
                            Margin="0,0,5,0"
