implement method toNavigateFriendDetails

--- a/MoneySplitter.Win10/Views/FriendsView.xaml
+++ b/MoneySplitter.Win10/Views/FriendsView.xaml
@@ -55,7 +55,9 @@
 
         <GridView x:Name="FriendsGridView"
                   ItemsSource="{x:Bind ViewModel.Friends, Mode=OneWay}"
-                  Visibility="Visible">
+                  Visibility="Visible"
+                  IsItemClickEnabled="True"
+                  ItemClick="OnFriendClick">
             <GridView.ItemTemplate>
                 <DataTemplate x:DataType="models:UserModel">
                     <customControls:DesktopUserContol ViewModel="{x:Bind Mode=OneWay}"
