--- a/MoneySplitter.Win10/CustomControls/CollaboratorControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/CollaboratorControl.xaml
@@ -34,7 +34,8 @@
         <Ellipse Width = "60" Height = "60"
                  Grid.Column = "1">
             <Ellipse.Fill>
-                <ImageBrush ImageSource = "{x:Bind ViewModel.ImageUrl, Mode=OneWay}"/>
+                <ImageBrush ImageSource = "{x:Bind ViewModel.ImageUrl, Mode=OneWay}"
+                            Stretch="UniformToFill"/>
             </Ellipse.Fill>
         </Ellipse>
         <StackPanel VerticalAlignment = "Center" Margin="7"
