--- a/MoneySplitter.Win10/CustomControls/UserDetailsControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/UserDetailsControl.xaml
@@ -5,22 +5,29 @@
     xmlns:local="using:MoneySplitter.Win10.CustomControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="using:MoneySplitter.Win10.Converters"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
+    <UserControl.Resources>
+        <converters:BankCardConverter x:Key="BankCardConverter" />
+        <converters:PhoneNumberConverter x:Key="PhoneNumberConverter" />
+    </UserControl.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Ellipse Width="120" Height="120" >
+        <Ellipse Width="120" Height="120"
+                  Margin="5">
             <Ellipse.Fill>
                 <ImageBrush ImageSource="{x:Bind ViewModel.ImageUrl, Mode=OneWay}"
-                                Stretch="UniformToFill"/>
+                            Stretch="UniformToFill"/>
             </Ellipse.Fill>
         </Ellipse>
-        <StackPanel Grid.Column="1">
+        <StackPanel Grid.Column="1"
+                    VerticalAlignment="Center">
             <TextBlock IsTextSelectionEnabled="True" 
                        TextTrimming="CharacterEllipsis"
                        HorizontalAlignment="Stretch"
@@ -29,16 +36,22 @@
                     <Run Text=" "/>
                     <Run Text="{x:Bind ViewModel.Surname, Mode=OneWay}"/>
             </TextBlock>
-            <TextBlock Text="{x:Bind ViewModel.Email, Mode=OneWay}"
-                       HorizontalAlignment="Stretch"
-                       TextTrimming="CharacterEllipsis"/>
-            <TextBlock Text="{x:Bind ViewModel.PhoneNumber, Mode=OneWay}"
-                       HorizontalAlignment="Stretch"
-                       TextTrimming="CharacterEllipsis"/>
-            <TextBlock Text="{x:Bind ViewModel.CreditCardNumber, Mode=OneWay}"
-                       HorizontalAlignment="Stretch"
-                       TextTrimming="CharacterEllipsis"/>
+            <TextBlock HorizontalAlignment="Stretch"
+                       TextTrimming="CharacterEllipsis">
+                <Run Text="Email: "/>
+                <Run Text="{x:Bind ViewModel.Email, Mode=OneWay}"/>
 
+            </TextBlock>
+            <TextBlock HorizontalAlignment="Stretch"
+                       TextTrimming="CharacterEllipsis">
+                <Run Text="Phone number: "/>
+                <Run Text="{x:Bind ViewModel.PhoneNumber, Converter={StaticResource PhoneNumberConverter}, Mode=OneWay}"/>
+            </TextBlock>
+            <TextBlock HorizontalAlignment="Stretch"
+                       TextTrimming="CharacterEllipsis">
+                <Run Text="Bank card: "/>
+                <Run Text="{x:Bind ViewModel.CreditCardNumber, Converter={StaticResource BankCardConverter}, Mode=OneWay}"/>
+            </TextBlock>
         </StackPanel>
     </Grid>
 </UserControl>
