--- a/MoneySplitter.Win10/Views/TransactionsView.xaml
+++ b/MoneySplitter.Win10/Views/TransactionsView.xaml
@@ -9,36 +9,38 @@
     xmlns:models="using:MoneySplitter.Models"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    <ScrollViewer>
+        <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
           ScrollViewer.VerticalScrollMode="Enabled"
           ScrollViewer.VerticalScrollBarVisibility="Auto">
-        <TextBlock VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   Foreground="#2C404B"
-                   FontSize="18"
-                   Text="You daon't have transactions("
-                   Visibility="{x:Bind ViewModel.IsNotTransactionsTextVisibility, Mode=OneWay}"/>
-        <StackPanel>
-            <Button Content="add" 
-                    Click="OnAddTransactionButtonClick"/>
+            <TextBlock VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       Foreground="#2C404B"
+                       FontSize="18"
+                       Text="You daon't have transactions("
+                       Visibility="{x:Bind ViewModel.IsNotTransactionsTextVisibility, Mode=OneWay}"/>
+            <StackPanel>
+                <Button Content="add" 
+                        Click="OnAddTransactionButtonClick"/>
 
-            <ListView x:Name="TransactionsList"
-                      ItemsSource="{x:Bind ViewModel.Transactions, Mode=OneWay}"
-                      IsItemClickEnabled="True"
-                      ScrollViewer.VerticalScrollMode="Enabled"
-                      ScrollViewer.VerticalScrollBarVisibility="Visible">
+                <ListView x:Name="TransactionsList"
+                          ItemsSource="{x:Bind ViewModel.Transactions, Mode=OneWay}"
+                          IsItemClickEnabled="True"
+                          ScrollViewer.VerticalScrollMode="Enabled"
+                          ScrollViewer.VerticalScrollBarVisibility="Visible">
                 
 
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="models:TransactionEventModel">
-                        <customControls:FriendTransactionControl ViewModel="{x:Bind Mode=OneWay}"/>
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:TransactionEventModel">
+                            <customControls:FriendTransactionControl ViewModel="{x:Bind Mode=OneWay}"/>
 
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </StackPanel>
-        <customControls:ErrorDetailsControl IsErrorVisable="{x:Bind ViewModel.IsErrorVisible, Mode=OneWay}"
-                                            ErrorDetails="{x:Bind ViewModel.ErrorDetailsModel, Mode=OneWay}"/>
-        <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsLoading, Mode=OneWay}"/>
-    </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+            <customControls:ErrorDetailsControl IsErrorVisable="{x:Bind ViewModel.IsErrorVisible, Mode=OneWay}"
+                                                ErrorDetails="{x:Bind ViewModel.ErrorDetailsModel, Mode=OneWay}"/>
+            <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsLoading, Mode=OneWay}"/>
+         </Grid>
+    </ScrollViewer>
 </Page>
