--- a/MoneySplitter.Win10/Views/AddTransactionView.xaml
+++ b/MoneySplitter.Win10/Views/AddTransactionView.xaml
@@ -37,6 +37,7 @@
                             Date="{x:Bind ViewModel.AddTransactionModel.DeadlineDate, Mode=TwoWay }"/>
                 <CheckBox Content="Are you callbarator?"
                           IsChecked="{x:Bind ViewModel.IsSelfCollabarator, Mode=TwoWay}"
+                          IsThreeState="False"
                           />
                 <StackPanel Orientation="Horizontal"  Margin="0,8,0,0">
                     <TextBlock Text="{x:Bind  ViewModel.LabelForTransactionImage, Mode=OneWay}"
