--- a/MoneySplitter.Win10/Views/TransactionsView.xaml
+++ b/MoneySplitter.Win10/Views/TransactionsView.xaml
@@ -1,13 +1,16 @@
-﻿<Page
-    x:Class="MoneySplitter.Win10.Views.TransactionsView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
-    xmlns:models="using:MoneySplitter.Models"
-    mc:Ignorable="d">
+﻿<Page x:Class="MoneySplitter.Win10.Views.TransactionsView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:MoneySplitter.Win10.Views"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
+      xmlns:models="using:MoneySplitter.Models"
+      xmlns:modelsApp="using:MoneySplitter.Models.App"
+      mc:Ignorable="d">
+    <Page.Resources>
+        <ResourceDictionary Source="../Styles/GlobalStyles.xaml"/>
+    </Page.Resources>
 
     <ScrollViewer>
         <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
@@ -20,20 +23,47 @@
                        Text="You daon't have transactions("
                        Visibility="{x:Bind ViewModel.IsNotTransactionsTextVisibility, Mode=OneWay}"/>
             <StackPanel>
-                <Button Content="add" 
-                        Click="OnAddTransactionButtonClick"/>
+                <StackPanel Orientation="Horizontal"
+                            Margin="0,16,24 ,16"
+                            HorizontalAlignment="Right">
+                    <Button Click="OnAddTransactionButtonClick"
+                            Style="{StaticResource DefaultButtonStyle}"
+                            Margin="0,0,8,0">
+                        <Button.Content>
+                            <StackPanel Orientation="Horizontal">
+                                <FontIcon Glyph="&#xE109;"
+                                          FontSize="12"/>
+                                <TextBlock  Text="ADD"
+                                            Margin="8,0,0,0"/>
+
+                            </StackPanel>
+                        </Button.Content>
+                    </Button>
+                    <ComboBox ItemsSource="{x:Bind ViewModel.SortModels, Mode=OneWay}"
+                              SelectedItem="{x:Bind ViewModel.SelectTypeSort, Mode=TwoWay}"
+                              SelectionChanged="OnSelectSortParameter">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate x:DataType="models:SortModel">
+                            <TextBlock Text="{x:Bind Title, Mode=OneWay}"/>
+                        </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                </StackPanel>
 
                 <ListView x:Name="TransactionsList"
                           ItemsSource="{x:Bind ViewModel.Transactions, Mode=OneWay}"
                           IsItemClickEnabled="True"
                           ScrollViewer.VerticalScrollMode="Enabled"
                           ScrollViewer.VerticalScrollBarVisibility="Visible">
-                
-
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="models:TransactionEventModel">
-                            <customControls:FriendTransactionControl ViewModel="{x:Bind Mode=OneWay}"/>
-
+                            <customControls:TransactionEventControl ViewModel="{x:Bind Mode=OneWay}"
+                                                                    OnGiveTransactionButtonClick="OnGiveCollaboratorButtonClick"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
@@ -41,6 +71,6 @@
             <customControls:ErrorDetailsControl IsErrorVisable="{x:Bind ViewModel.IsErrorVisible, Mode=OneWay}"
                                                 ErrorDetails="{x:Bind ViewModel.ErrorDetailsModel, Mode=OneWay}"/>
             <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsLoading, Mode=OneWay}"/>
-         </Grid>
+        </Grid>
     </ScrollViewer>
 </Page>
