--- a/MoneySplitter.Win10/CustomControls/TransactionStatusControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/TransactionStatusControl.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             HorizontalAlignment="Left"
              d:DesignHeight="300"
              d:DesignWidth="400">
     <UserControl.Resources>
@@ -15,10 +16,13 @@
     </UserControl.Resources>
     <Grid>
         <Border x:Name="UserRoleLabelBorder"
-                Padding="4"
-                Margin="4,0,0,0"
+                Height="22"
+                Padding="8,0,8,0"
                 VerticalAlignment="Center">
             <TextBlock x:Name="UserRoleLabel"
+                       FontSize="14"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Left"
                        Foreground="White"/>
         </Border>
     </Grid>
