--- a/MoneySplitter.Win10/CustomControls/TransactionEventControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/TransactionEventControl.xaml
@@ -10,24 +10,17 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
     <UserControl.Resources>
+        <ResourceDictionary>
         <SolidColorBrush x:Name="NotVisibilCallobartorCountColor" Color="#5c5c5c"/>
         <SolidColorBrush x:Name="Border" Color="#c5c5c5"/>
         <converters:DateCoverter x:Key="DateConverter" />
         <converters:TypeDateCoverter x:Key="TypeDateCoverter" />
         <converters:NotVisibilCollabarratorsCountVisibilityConverter x:Key="NotVisibilCollabarratorsCountVisibilityConverter"/>
-        <Style TargetType="Button" x:Name="DefaultButtonStyle">
-            <Setter Property="Background" Value="Transparent" />
-            <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}"/>
-            <Setter Property="BorderBrush" Value="{StaticResource Border}"/>
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="Padding" Value="8,12,8,12" />
-            <Setter Property="HorizontalAlignment" Value="Left" />
-            <Setter Property="VerticalAlignment" Value="Top" />
-            <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
-            <Setter Property="FontWeight" Value="Normal" />
-            <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
-            <Setter Property="UseSystemFocusVisuals" Value="True" />
-        </Style>
+        <ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary Source="../Styles/GlobalStyles.xaml"/>
+        </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+       
     </UserControl.Resources>
     
         <Grid Margin="12,12,12,0">
@@ -40,40 +33,48 @@
                 <ColumnDefinition  Width="auto"/>
                 <ColumnDefinition  Width="auto"/>
             </Grid.ColumnDefinitions>
-      
-            
-            <Rectangle Width="68" 
-                   Height="120"
-                       HorizontalAlignment="Left">
-                <Rectangle.Fill>
-                    <ImageBrush ImageSource="{x:Bind ViewModel.ImageUrl, Mode=OneWay}"
-                            Stretch="UniformToFill"/>
-                </Rectangle.Fill>
-            </Rectangle>
+
+                <Border BorderThickness="1"
+                        BorderBrush="{StaticResource BorderImageBrush}">
+                    <Rectangle Width="68" 
+                           Height="120"
+                           HorizontalAlignment="Left">
+                        <Rectangle.Fill>
+                            <ImageBrush ImageSource="{x:Bind ViewModel.ImageUrl, Mode=OneWay}"
+                                Stretch="UniformToFill"/>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                </Border>
                 <StackPanel VerticalAlignment="Top" 
                         Grid.Column="1"
                         Margin="8,0,0,0"
                         HorizontalAlignment="Stretch">
                     <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay}"
-                       Style="{StaticResource SubtitleTextBlockStyle}"
-                       HorizontalAlignment="Stretch"
-                       TextTrimming="WordEllipsis"/>
+                       FontSize="16"
+                       Foreground="{StaticResource DarkColorBrush}"
+                       TextWrapping="Wrap"
+                       HorizontalAlignment="Stretch"/>
 
                     <TextBlock  HorizontalAlignment="Stretch"
-                            TextTrimming="CharacterEllipsis">
-                <Run Text="{x:Bind ViewModel.TypeDate, Converter={StaticResource TypeDateCoverter}, Mode=OneWay}"/>
-                <Run Text="{x:Bind ViewModel.Date, Converter={StaticResource DateConverter}, Mode=OneWay}"/>
+                                TextWrapping="Wrap"
+                                FontSize="14"
+                                Foreground="{StaticResource DarkGrayColorBrush}"
+                                >
+                        <Run Text="{x:Bind ViewModel.TypeDate, Converter={StaticResource TypeDateCoverter}, Mode=OneWay}"/>
+                        <Run Text="{x:Bind ViewModel.Date, Converter={StaticResource DateConverter}, Mode=OneWay}"/>
                     </TextBlock>
 
                     <StackPanel Orientation="Horizontal"
-                            Margin="4">
+                            Margin="0,4,4,4">
                         <TextBlock  HorizontalAlignment="Stretch"
-                            TextTrimming="CharacterEllipsis"
-                            FontSize="16"
-                            VerticalAlignment="Center">
-                    <Run Text="{x:Bind ViewModel.SingleCost, Mode=OneWay}"/><Run Text="$"/>
+                                    TextTrimming="CharacterEllipsis"
+                                    FontSize="14"
+                                    VerticalAlignment="Center"
+                                    Foreground="{StaticResource DarkGrayColorBrush}"
+                                    Margin="0,0,4,0">
+                          <Run Text="{x:Bind ViewModel.SingleCost, Mode=OneWay}"/><Run Text="$"/>
                         </TextBlock>
-                        <local:TransactionStatusControl Role="{x:Bind ViewModel.UserRole, Mode=OneWay}"/>
+                             <local:TransactionStatusControl Role="{x:Bind ViewModel.UserRole, Mode=OneWay}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
                         <ItemsControl ItemsSource="{x:Bind ViewModel.CollaboratorImageUrls, Mode=OneWay}">
@@ -96,11 +97,11 @@
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
                         <Border Background="{StaticResource NotVisibilCallobartorCountColor}"
-                        Visibility="{x:Bind ViewModel.NotVisibilCollabarratorsCount, Converter={StaticResource NotVisibilCollabarratorsCountVisibilityConverter}, Mode=OneWay}"
-                        CornerRadius="30"
-                        Width="36"
-                        Height="36"
-                        VerticalAlignment="Center">
+                                Visibility="{x:Bind ViewModel.NotVisibilCollabarratorsCount, Converter={StaticResource NotVisibilCollabarratorsCountVisibilityConverter}, Mode=OneWay}"
+                                CornerRadius="30"
+                                Width="36"
+                                Height="36"
+                            VerticalAlignment="Center">
                             <TextBlock Foreground="White"
                                VerticalAlignment="Center"
                                HorizontalAlignment="Center"
