--- a/MoneySplitter.Win10/Views/TransactionsView.xaml
+++ b/MoneySplitter.Win10/Views/TransactionsView.xaml
@@ -34,6 +34,7 @@
                                 <FontIcon Glyph="&#xE109;"
                                           FontSize="12"/>
                                 <TextBlock  Text="ADD"
+                                            FontSize="14"
                                             Margin="8,0,0,0"/>
 
                             </StackPanel>
@@ -41,7 +42,10 @@
                     </Button>
                     <ComboBox ItemsSource="{x:Bind ViewModel.SortModels, Mode=OneWay}"
                               SelectedItem="{x:Bind ViewModel.SelectTypeSort, Mode=TwoWay}"
-                              SelectionChanged="OnSelectSortParameter">
+                              SelectionChanged="OnSelectSortParameter"
+                              BorderThickness="1"
+                              BorderBrush="{StaticResource Border}"
+                              Height="36">
                         <ComboBox.ItemTemplate>
                             <DataTemplate x:DataType="models:SortModel">
                             <TextBlock Text="{x:Bind Title, Mode=OneWay}"/>
