--- a/MoneySplitter.Win10/Styles/GlobalStyles.xaml
+++ b/MoneySplitter.Win10/Styles/GlobalStyles.xaml
@@ -37,4 +37,18 @@
         <Setter Property="MaxWidth" Value="{ThemeResource FlyoutThemeMaxWidth}" />
         <Setter Property="MinHeight" Value="{ThemeResource MenuFlyoutThemeMinHeight}"/>
     </Style>
+    
+    <Style x:Key="ImageBorderStyle" TargetType="Border">
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="{StaticResource BorderImageBrush}"/>
+    </Style>
+    <Style x:Key="ControlMainTextStyle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
+    </Style>
+    <Style x:Key="ControlAdditionTextStyle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkGrayColorBrush}"/>
+    </Style>
+
 </ResourceDictionary>
