--- a/MoneySplitter.Win10/Views/TransactionsView.xaml
+++ b/MoneySplitter.Win10/Views/TransactionsView.xaml
@@ -67,9 +67,17 @@
                         </Style>
                     </ListView.ItemContainerStyle>
                     <ListView.ItemTemplate>
+
                         <DataTemplate x:DataType="models:TransactionEventModel">
-                            <customControls:TransactionEventControl ViewModel="{x:Bind Mode=OneWay}"
-                                                                    OnGiveTransactionButtonClick="OnGiveCollaboratorButtonClick"/>
+                            <Grid Margin="12,12,12,0">
+                                <Border BorderThickness="0,0,0,1"
+                                        BorderBrush="{StaticResource Border}">
+                                    <Grid Padding="0,0,0,12">
+                                    <customControls:TransactionEventControl ViewModel="{x:Bind Mode=OneWay}"
+                                                                        OnGiveTransactionButtonClick="OnGiveCollaboratorButtonClick"/>
+                                    </Grid>
+                                </Border>
+                            </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
