--- a/MoneySplitter.Win10/Styles/GlobalStyles.xaml
+++ b/MoneySplitter.Win10/Styles/GlobalStyles.xaml
@@ -37,4 +37,16 @@
         <Setter Property="MaxWidth" Value="{ThemeResource FlyoutThemeMaxWidth}" />
         <Setter Property="MinHeight" Value="{ThemeResource MenuFlyoutThemeMinHeight}"/>
     </Style>
+    <Style x:Key="ControlMainTextStyle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
+    </Style>
+    <Style x:Key="ControlAdditionTextStyle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkGrayColorBrush}"/>
+    </Style>
+    <Style x:Key="ListHeaderTextStyle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="Foreground" Value="{StaticResource MainBrush}"/>
+    </Style>
 </ResourceDictionary>
