--- a/MoneySplitter.Win10/Views/FriendDetailsView.xaml
+++ b/MoneySplitter.Win10/Views/FriendDetailsView.xaml
@@ -98,7 +98,8 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <TextBlock VerticalAlignment="Center"
-                           HorizontalAlignment="Center"
+                           HorizontalAlignment="Left"
+                           Margin="20,4,0,0"
                            Style="{StaticResource ListHeaderTextStyle}"
                            Text="Debts"/>
                 <ListView x:Name="DebtsList"
@@ -134,7 +135,8 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <TextBlock VerticalAlignment="Center"
-                           HorizontalAlignment="Center"
+                           HorizontalAlignment="Left"
+                           Margin="20,4,0,0"
                            Style="{StaticResource ListHeaderTextStyle}"
                            Text="Lends"/>
                 <ListView x:Name="LendsList"
